Avoid unnecessary loop over elements by inlining initRanks and calculating min during first construction